--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,97 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@charset "UTF-8";
+html{
+  background: #fff;
+}
+
+.relative{
+  position: relative;
+  width: 350px;
+}
+.absolute{
+  position: absolute;
+  left: 0px;
+  bottom: 1px;
+}
+.abs{
+  position: absolute;
+  left: 50px;
+  bottom: 0.1px;
+}
+
+div.nav {
+width: 100%; /* ナビゲーションの幅 */
+background-color: #f9f9f9; /* ナビゲーションの背景色 */
+border-top: 1px #cccccc solid; /* 上境界線 */
+border-bottom: 1px #cccccc solid; /* 下境界線 */
+font-size: 80%;
+position: fixed;
+}
+/* --- メニューエリア --- */
+div.nav ul.nl {
+width: 350px; /* メニューの幅 */
+margin: 0 auto; /* センターに配置 */
+padding: 0;
+background-color: #ffffff; /* メニューの背景色 */
+border-right: 1px #cccccc solid; /* メニューの右境界線 */
+list-style-type: none;
+text-align: center;
+}
+
+/* --- メニュー項目 --- */
+div.nav ul.nl li {
+width: 25%; /* 項目の幅 */
+float: left;
+}
+
+/* --- リンク --- */
+div.nav ul.nl li a {
+display: block;
+position: relative; /* IE6用 */
+padding: 8px 2px; /* リンクエリアのパディング（上下、左右） */
+border-left: 1px #cccccc solid; /* リンクエリアの左境界線 */
+text-decoration: none; /* テキストの下線（なし） */
+}
+/* --- ポイント時の設定 --- */
+div.nav ul.nl li a:hover {
+background-color: #f0ffff; /* ポイント時の背景色 */
+text-decoration: underline; /* テキストの下線（あり） */
+}
+font{
+ padding:10px 40px;
+ background:#000066;
+ color:#ffffff;
+ font-weight:bold;
+}
+h2{
+ border:1px
+ solid #000066;
+ padding:10px;
+ font-size: 200%;
+ margin-top:4px;
+ text-align: right;
+}
+.big{
+  font-size: 40px;
+}
+#style{
+  background-color: #fff;
+  border-style: none;
+  border-radius: 10px;
+  padding: 10px 10px 10px 10px;
+  margin-bottom: 15px;
+}
+
+/* --- clearfix --- */
+.clearFix:after {
+content: ".";
+display: block;
+height: 0;
+clear: both;
+visibility: hidden;
+}
+.clearFix {
+min-height: 1px;
+}
