ランキングページの作成（デザイン）

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,10 +10,10 @@
   <body>
       <div class="nav">
         <ul class="nl clearFix">
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">Money</a></li>
+          <li><a href="http://133.242.235.164/home/index">HOME</a></li>
+          <li><a href="http://133.242.235.164/home/show">Money</a></li>
           <li><a href="#">MyGraph</a></li>
-          <li><a href="#">Rankings</a></li>
+          <li><a href="http://133.242.235.164/ranking/index">Rankings</a></li>
         </ul>
       </div>
 
@@ -35,15 +35,14 @@
 <font>■目標金額はこちら■</font>
 <h2>1,000,000,000,000</h2>
 </div>
-<div id="style">
+<div id="style" class="box">
 <font>■支出グラフ■</font>
 <br>
 <br>
 <br>
 <body onload="displayLineChart();">
-  <div class="box">
+
     <canvas id="lineChart" height="450" width="350"></canvas>
   </div>
-</div>
   </body>
 </html>
