決済情報をDBに入れれるように

--- a/app/views/post/update.html.erb
+++ b/app/views/post/update.html.erb
@@ -1,2 +1,14 @@
-<h1>Post#update</h1>
-<p>Find me in app/views/post/update.html.erb</p>
+<body>
+	<table>
+
+		<th>POS入力</th>
+		<tr>
+			<td><p><input id="posShow" placeholder="引き落とし額" value=""></p></td>
+		</tr>
+	</table>
+
+	<button id="btn01" onclick="showRemaining()">ID表示</button>
+
+	<button id="sendRemaining" >引き落とし額を送信</button>
+	<p id="showId"></p>
+</body>
