決済できるように

--- a/app/views/payment/new.html.erb
+++ b/app/views/payment/new.html.erb
@@ -1,5 +1,6 @@
 <body>
 	<table>
+		<%= debug @money %>
 		<th>POS入力</th>
     <tr>
       <%= form_for @payment,:url => {:action => :create} do |f| %>
