画像ファイルを追加

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,9 +22,12 @@
       <br>
       <div id="style" class="relative">
         <img  class="" src="/assets/images.jpg"width="350"height="100">
-        <img  class="absolute" src="/assets/images.png"width="50"height="50" align="left">
+
+        <!-- <img  class="absolute" src="/assets/images.png"width="50"height="50" align="left"> -->
+        <%= image_tag "#{@user.picture}", :size => '50x50' ,:class => "absolute", :align => "left" %>
         <p class="abs">ユーザ名 <%= @user.name %></p>
       </div>
+      <%= debug @user %>
 <div id="style">
 <p><span class="big">09月</span>の利用状況</p>
 <br>
