--- a/app/views/post/update.html.erb
+++ b/app/views/post/update.html.erb
@@ -1,14 +1,6 @@
-<body>
-	<table>
+ <body>
 
-		<th>POS入力</th>
-		<tr>
-			<td><p><input id="posShow" placeholder="引き落とし額" value=""></p></td>
-		</tr>
-	</table>
+	<div >
 
-	<button id="btn01" onclick="showRemaining()">ID表示</button>
-
-	<button id="sendRemaining" >引き落とし額を送信</button>
-	<p id="showId"></p>
-</body>
+	</div>
+ </body>
