デザインの統合

--- a/app/assets/stylesheets/ranking.scss
+++ b/app/assets/stylesheets/ranking.scss
@@ -1,3 +1,90 @@
 // Place all the styles related to the Ranking controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@charset "UTF-8";
+
+.no01{
+	background-color:red;
+}
+html{
+  background: #fff;
+}
+div.nav {
+width: 100%; /* ナビゲーションの幅 */
+background-color: #f9f9f9; /* ナビゲーションの背景色 */
+border-top: 1px #cccccc solid; /* 上境界線 */
+border-bottom: 1px #cccccc solid; /* 下境界線 */
+font-size: 90%;
+position: fixed;
+}
+/* --- メニューエリア --- */
+div.nav ul.nl {
+width: 350px; /* メニューの幅 */
+margin: 0 auto; /* センターに配置 */
+padding: 0;
+background-color: #ffffff; /* メニューの背景色 */
+border-right: 1px #cccccc solid; /* メニューの右境界線 */
+list-style-type: none;
+text-align: center;
+}
+
+/* --- メニュー項目 --- */
+div.nav ul.nl li {
+width: 33%; /* 項目の幅 */
+float: left;
+}
+
+/* --- リンク --- */
+div.nav ul.nl li a {
+display: block;
+position: relative; /* IE6用 */
+padding: 8px 2px; /* リンクエリアのパディング（上下、左右） */
+border-left: 1px #cccccc solid; /* リンクエリアの左境界線 */
+text-decoration: none; /* テキストの下線（なし） */
+}
+/* --- ポイント時の設定 --- */
+div.nav ul.nl li a:hover {
+background-color: #f0ffff; /* ポイント時の背景色 */
+text-decoration: underline; /* テキストの下線（あり） */
+}
+font{
+ padding:10px 40px;
+ background:#000066;
+ color:#ffffff;
+ font-weight:bold;
+}
+table{
+	width: 350px;
+	align: center;
+}
+th{
+	align: center;
+}
+.table table{
+	margin-bottom: 10px;
+}
+h1{
+	color: #DE1f1f;
+	font-style: italic;
+	text-align: center;
+	margin-top: 10px;
+	margin-bottom: 110px;
+}
+.dai{
+	position: relative;
+}
+.First{
+	position: absolute;
+  left: 130px;
+  bottom: 150px;
+}
+.Second{
+	position: absolute;
+	left: 0px;
+	bottom: 93px;
+}
+.Third{
+	position: absolute;
+	left: 248px;
+	bottom: 85px;
+}
