--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,2 +1,33 @@
-<h1>Home#show</h1>
-<p>Find me in app/views/home/show.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+
+    <title>money</title>
+    <script src=<%=javascript_path "Chart.min"%>></script>
+
+  </head>
+  <body>
+  <div class="nav">
+    <ul class="nl clearFix">
+      <li><a href="http://133.242.235.164/home/index">HOME</a></li>
+      <li><a href="http://133.242.235.164/home/show">Money</a></li>
+      <li><a href="http://133.242.235.164/ranking/index">Rankings</a></li>
+    </ul>
+  </div>
+</body>
+<body>
+    <br>
+    <br>
+    <br>
+
+</body>
+<div id="sty">
+  <font>■支出割合■</font>
+  <br>
+  <br>
+<canvas id="canvas" height="350" width="350"></canvas>
+</div>
+
+</html>
