--- a/app/views/ranking/index.html.erb
+++ b/app/views/ranking/index.html.erb
@@ -25,9 +25,9 @@
 <h1>■浪費ランキング■</h1>
 <div class="dai">
 <img src="/assets/gatag.jpg"width="350"height="150">
-<a id="itii"><img class="First" src="/assets/human.jpg"  width="100" height="100"></a>
-<a id="nii"><img class="Second" src="/assets/human.jpg" width="100" height="100" ></a>
-<a id="sanni"><img class="Third" src="/assets/human.jpg" width="100" height="100" ></a>
+<a id="itii"><img class="First" src="/assets/cat.png"  width="100" height="100"></a>
+<a id="nii"><img class="Second" src="/assets/jibanyan.png" width="100" height="100" ></a>
+<a id="sanni"><img class="Third" src="/assets/and.png" width="100" height="100" ></a>
 </div>
 <body>
 
